Name and contact button display problem on mobile fixed

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 60%;
 }
 
 .role {
